--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:exported="true"
+            android:authorities="com.example.sven.contentproviderdemo.provider"
+            android:name="com.example.sven.contentproviderdemo.DbProvider"/>
     </application>
 
 </manifest>
